apps/databases/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:18.2-trixie
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-scripts
              mountPath: /docker-entrypoint-initdb.d
              readOnly: true
            - name: postgres-data
              mountPath: /var/lib/postgresql/18/docker
          livenessProbe:
            exec:
              command:
                - pg_isready
            failureThreshold: 1
            initialDelaySeconds: 10
            periodSeconds: 10
      volumes:
        - name: postgres-scripts
          configMap:
            name: postgres-scripts
  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        accessModes:
          - ReadWriteOncePod
        resources:
          requests:
            storage: 1Gi
